--- a/public/styles.css
+++ b/public/styles.css
@@ -4,7 +4,10 @@
 
 @layer components {
   .btn-primary {
-    @apply text-white bg-sky-600 hover:bg-cyan-500 hover:shadow-lg focus:ring-4 focus:outline-none focus:ring-sky-300 font-medium rounded-lg text-sm px-4 py-2;
+    @apply text-white bg-sky-700 hover:bg-cyan-500 hover:shadow-lg focus:ring-4 focus:outline-none focus:ring-sky-300 font-medium rounded-lg text-sm px-4 py-2;
+  }
+  .search-btn {
+    @apply text-white bg-sky-700 hover:bg-cyan-500 hover:shadow-lg focus:ring-2 focus:outline-none focus:ring-sky-300 font-medium rounded-lg text-sm m-1 px-4 py-2 flex-shrink-0;
   }
 
   .h1 {
